# cv_compositor

./: README.md  compose.py  ex.typst  pyproject.toml
data/: awards_en.yaml  education_en.yaml  experience_en.yaml  headers_en.yaml  languages_en.yaml  projects_en.yaml  publications_en.yaml  skills_en.yaml  volunteering_en.yaml
src/: app.py  compose.py  cv_components.py  utils.py
templates/: preamble.typ
